--- a/css/registrarse.css
+++ b/css/registrarse.css
@@ -1,38 +1,177 @@
-:root
-{
-    --pink:#e84393;
+:root {
+  --pink: #e84393;
 }
 
-*
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-body
-{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+.wrapper {
+  background: #ececec;
+  padding: 0 20px 0 20px;
 }
 
-.container
-{
-    max-width: 650px;
-    padding: 28px;
-    margin: 0 28px;
-    box-shadow: 0 15px 20px rgba(0,0,0,0.2);
+.logo {
+  color: #fff;
+  font-weight: bolder;
 }
 
-.container h2
-{
-    font-weight: bold;
+.logo span {
+  color: var(--pink);
 }
 
-.container h4
-{
-    font-weight: bold;
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+.row {
+  width: 900px;
+  height: max-content;
+  border-radius: 10px;
+  background: #fff;
+  box-shadow: 5px 5px 10px 1px rgba(0, 0, 0, 0.2);
+}
+
+.image {
+  background-image: url(../img/home/ej7.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  border-radius: 10px 0 0 10px;
+}
+
+.text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.text p {
+  color: #fff;
+  font-size: 18px;
+}
+
+i {
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.input-box {
+  width: 330px;
+  box-sizing: border-box;
+}
+
+.input-box header {
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 45px;
+}
+
+.input-field {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  padding: 0 10px 0 10px;
+}
+
+.input {
+  height: 45px;
+  width: 100%;
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  outline: none;
+  margin-bottom: 20px;
+  color: #40414a;
+}
+
+.input-box .input-field label {
+  position: absolute;
+  top: 0px;
+  left: 10px;
+  pointer-events: none;
+  transition: 0.5s;
+}
+
+.input-field .input:focus ~ label {
+  top: -10px;
+  font-size: 13px;
+}
+
+.input-field .input:valid ~ label {
+  top: -10px;
+  font-size: 13px;
+  color: #5d5076;
+}
+
+.input-field .input:focus,
+.input-field .input:valid {
+  border-bottom: 1px solid var(--pink);
+}
+
+.submit {
+  font-weight: bold;
+  border: none;
+  outline: none;
+  height: 45px;
+  background: #333;
+  color: white;
+  border-radius: 5px;
+  transition: 0.4s;
+}
+
+.submit:hover {
+  background: var(--pink);
+  color: #fff;
+}
+
+.registro {
+  text-align: center;
+  font-size: small;
+  margin-top: 25px;
+}
+
+.registro span a {
+  text-decoration: none;
+  font-weight: 700;
+  color: #000;
+  transition: 0.5s;
+}
+
+.registro span a:hover {
+  color: var(--pink);
+}
+
+@media only screen and (max-width: 768px) {
+  .side-image {
+    border-radius: 10px 10px 0 0;
+  }
+
+  .text {
+    position: absolute;
+    text-align: center;
+  }
+
+  .logo p {
+    font-size: 1rem;
+  }
+
+  .row {
+    max-width: 420px;
+    width: 100%;
+  }
 }
