--- a/css/registrarse.css
+++ b/css/registrarse.css
@@ -89,14 +89,15 @@ i {
 }
 
 .input {
-  height: 45px;
+  height: 30px;
   width: 100%;
   background: transparent;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   outline: none;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   color: #40414a;
+  padding-top: 0px;
 }
 
 .input-box .input-field label {
