--- a/css/registrarse.css
+++ b/css/registrarse.css
@@ -93,7 +93,7 @@ i {
   width: 100%;
   background: transparent;
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2) !important;
   outline: none;
   margin-bottom: 10px;
   color: #40414a;
