--- a/css/registrarse.css
+++ b/css/registrarse.css
@@ -146,14 +146,14 @@ i {
   margin-top: 25px;
 }
 
-.registro span a {
+.alert span a {
   text-decoration: none;
   font-weight: 700;
   color: #000;
   transition: 0.5s;
 }
 
-.registro span a:hover {
+.alert span a:hover {
   color: var(--pink);
 }
 
