--- a/css/calendario.css
+++ b/css/calendario.css
@@ -62,3 +62,25 @@
   background-color: #f5f5f5;
   color: #ccc;
 }
+.checkbox-options {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.checkbox-option {
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 200px;
+  text-align: center;
+  background-color: #888;
+}
+
+.description {
+  margin-top: 10px;
+}
+
+.price {
+  font-weight: bold;
+}
