--- a/css/calendario copy 3.css
+++ b/css/calendario copy 3.css
@@ -63,3 +63,38 @@
 
   /* Agrega más propiedades CSS según tus preferencias */
 }
+/* Estilos para el input */
+.date-input-container {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.date-input-label {
+  margin-right: 10px;
+}
+
+.date-input {
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+/* Estilos para los servicios */
+.servicio-title {
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 5px;
+}
+
+.descripcion {
+  font-size: 14px;
+  color: #777;
+}
+
+.servicio-price {
+  font-size: 20px;
+  font-weight: bold;
+  color: #ff69b4; /* Color personalizado para el precio */
+  margin-top: 10px;
+}
