--- a/css/perfil.css
+++ b/css/perfil.css
@@ -14,8 +14,9 @@
 .iconperfil
 {
     border-radius: 1000px;
-    width: 200px;
+    width: 140px;
     height: auto;
+    margin-right: 30px;
 }
 
 .conteperfil
