--- a/css/home.css
+++ b/css/home.css
@@ -188,7 +188,8 @@
     padding: 0.1rem 0;
   }
   
-  .heading {
+  .heading 
+  {
     font-weight: bold;
     text-align: center;
     font-size: 2rem;
@@ -198,7 +199,8 @@
     background: rgba(255, 51, 153, 0.05);
   }
   
-  .heading span {
+  .heading span 
+  {
     color: var( --rosaa);
   }
   
@@ -430,6 +432,23 @@
   .credit span {
     color: var( --rosaa);
   }
+
+.btnc
+{
+  display: inline-block;
+  margin-top: 0.1rem;
+  border-radius: 1rem;
+  background: #333;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.btnc:hover
+{
+  background-color: var(--rosaa);
+  color: #fff;
+}
   
   /* RESPONSIVE */
   @media (max-width: 991px) {
