--- a/css/home.css
+++ b/css/home.css
@@ -27,7 +27,8 @@
     color: var( --rosaa);
   }
   
-  section {
+  section 
+  {
     padding: 1rem 9%;
   }
   
@@ -43,7 +44,8 @@
     transition: 0.2s linear;
   }
   
-  nav {
+  nav 
+  {
     background: #fff;
     padding: 2rem 9%;
     display: flex;
