--- a/css/perfil.css
+++ b/css/perfil.css
@@ -1,4 +1,5 @@
-.ima {
+.ima 
+{
   width: 150px; /* Ancho de la imagen circular */
   height: 150px; /* Altura de la imagen circular */
   border-radius: 50%; /* Hace que la imagen tenga bordes redondeados para formar un círculo */
@@ -6,7 +7,8 @@
   border: 2px solid #6e6e6e; /* Agrega un borde de 2px sólido con color #333 (puedes cambiar el color) */
 }
 
-.imacon img {
+.imacon img 
+{
   width: 100%; /* Asegura que la imagen ocupe todo el espacio del contenedor circular */
   height: 100%; /* Asegura que la imagen ocupe todo el espacio del contenedor circular */
   object-fit: cover; /* Ajusta la imagen para que cubra todo el contenedor sin deformarse */
@@ -28,4 +30,25 @@
 p
 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.container1
+{
+  margin-top: 2rem;
+}
+
+.nav-pills .nav-link.active,
+.show>.nav-pills .nav-link
+{
+    background: #e84393 !important
+}
+
+.tabsbotones
+{
+    color: #333;
+}
+
+.tabsbotones:hover
+{
+    color: #333;
 }
