--- a/css/admins.css
+++ b/css/admins.css
@@ -222,3 +222,9 @@
   color: #fff;
   border-color: #e84393;
 }
+
+.form-control:focus 
+{
+  box-shadow: 0 0 5px #e84393;
+  border-color: #e84393; 
+}
