DISEÑO CASI FINALIZADO
:confetti_ball:

--- a/css/admins.css
+++ b/css/admins.css
@@ -125,9 +125,10 @@
   border: none;
 }
 
-.dropdown-menu a:hover
+.cmabiop ul.dropdown-menu li a:active 
 {
-  color: var(--main-text-color);
+  background-color: #e84393;
+  color: white;
 }
 
 /* RESPONSIVE */
